# docs/swagger.yaml
@@ -198,6 +198,11 @@ definitions:
     - email
     - password
     type: object
+  domain.MeResponse:
+    properties:
+      user:
+        $ref: '#/definitions/domain.UserResponse'
+    type: object
   domain.NearbyRegion:
     properties:
       coffee_count:
@@ -291,6 +296,8 @@ definitions:
     type: object
   domain.RoasterResponse:
     properties:
+      coffee_count:
+        type: integer
       id:
         type: integer
       name:
@@ -407,14 +414,8 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/domain.UserResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Get current user
+            $ref: '#/definitions/domain.MeResponse'
+      summary: Get current user (returns null user when unauthenticated)
       tags:
       - auth
   /api/auth/register:
@@ -467,10 +468,6 @@ paths:
         in: query
         name: variety
         type: string
-      - description: Filter by stock status
-        in: query
-        name: in_stock
-        type: boolean
       - description: Coffee ID to find similar coffees for
         in: query
         name: similar_to
